--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -2,6 +2,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    padding: 20px;
+    font-family: 'Roboto Mono', monospace;
 }
 
 main {
@@ -10,5 +12,25 @@ main {
 
 section {
     max-width: 800px;
-    margin: 50px auto;
+    margin: 50px auto 100px auto;
+}
+
+h1 {
+    font-size: 28px;
+}
+
+h2 {
+    font-size: 24px;
+}
+
+h1,
+h2 {
+    font-weight: 600;
+    margin-bottom: 50px;
+}
+
+@media (max-width: 460px) {
+	section {
+        margin: 50px auto;
+    }
 }
