--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -1,5 +1,27 @@
 header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 10px 40px;
+    border-bottom: 2px solid black;
+}
+
+.header-logo {
+    width: 90px;
+    min-width: 70px;
+}
+
+.header-title {
+    font-size: 20px;
+    color: limegreen;
+}
+
+@media (max-width: 460px) {
+	header {
+        padding: 10px 0px;
+    }
+
+    .header-title {
+        text-align: right;
+    }
 }
